--- a/src/app/feature/components/objects/components/filter/filter.component.html
+++ b/src/app/feature/components/objects/components/filter/filter.component.html
@@ -1,21 +1,12 @@
 <div class="full-width container">
-  <button
-    class="btn bg-blue mb-3 full-width responsive-text"
-    [routerLink]="['create']"
-  >
+  <button class="btn bg-blue mb-3 full-width responsive-text" [routerLink]="['create']">
     Crear Objeto
   </button>
 </div>
 <div class="full-width container mb-2">
   <div class="input-group mb-3">
     <form>
-      <input
-        type="text"
-        class="form-control"
-        placeholder="Buscar"
-        name="word"
-        [(ngModel)]="word"
-      />
+      <input type="text" class="form-control" placeholder="Buscar" name="word" [(ngModel)]="word" />
     </form>
     <button class="bg-blue search-btn" (click)="sendSearch()">
       <i class="fa-solid fa-magnifying-glass"></i>
@@ -26,18 +17,14 @@
   <div class="card full-width">
     <div class="card-body">
       <h5 class="card-title text-center responsive-text">Filtros</h5>
-      <h6 class="card-subtitle mb-2 text-muted responsive-text">Color</h6>
+      <h6 class="card-subtitle mb-2 text-muted responsive-text">Tipo</h6>
       <ul>
-        <li class="form-check form-switch">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="flexSwitchCheckDefault"
-          />
-          <label class="form-check-label responsive-text">Rojo</label>
+        <li class="form-check form-switch" *ngFor="let filter of filters">
+          <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault"
+            (change)="filterResults(filter, $event)" />
+          <label class="form-check-label responsive-text">{{filter}}</label>
         </li>
       </ul>
-      <h6 class="card-subtitle mb-2 text-muted mt-3 responsive-text">Tipo</h6>
     </div>
   </div>
 </section>
