--- a/src/app/feature/components/objects/components/list/list.component.css
+++ b/src/app/feature/components/objects/components/list/list.component.css
@@ -29,6 +29,41 @@ ul {
     align-items: center;
     justify-content: center;
 }
+
 .responsive-text{
-    font-size: 1vw;
+    font-size: 0.97vw;
+}
+
+.claimed{
+    position: absolute;
+    margin: auto;
+    bottom: 63%;
+    -webkit-transform: rotate(-45deg);
+    font-size: 2.5vw;
+    color: #00eaff;
+}
+
+.card-img-top{
+    filter: brightness(60%);
+    background-color: #000000;
+}
+
+.hiden{
+    visibility: hidden;
+    height: 0;
+}
+.btn-edit{
+    background-color: #1FB2DE;
+    color: #FFFFFF;
+}
+.btn-edit:hover{
+    background-color: #188db1;
+    color: #FFFFFF;
+}
+.btn-delete{
+    background-color: #EC0677;
+    color: #FFFFFF;
+}
+.btn-delete:hover{
+    background-color: #bd005b; 
 }
